# algebra

./: CMakeLists.txt  LICENSE  expression.cpp  expression.h
src/: expression.cpp  expression.h  parser.cpp  parser.h  ptr.h
test/: simplify.cpp
